--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  color: white
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+#particleJs canvas {
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(315deg,
+      hsl(0deg 0% 0%) 0%,
+      hsl(139deg 3% 1%) 34%,
+      hsl(139deg 7% 2%) 51%,
+      hsl(139deg 10% 3%) 61%,
+      hsl(139deg 14% 3%) 69%,
+      hsl(139deg 19% 4%) 75%,
+      hsl(139deg 23% 5%) 81%,
+      hsl(139deg 28% 5%) 85%,
+      hsl(139deg 34% 6%) 89%,
+      hsl(139deg 40% 6%) 92%,
+      hsl(139deg 46% 6%) 95%,
+      hsl(139deg 53% 7%) 98%,
+      hsl(139deg 61% 7%) 100%);
 }
