--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,8 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  color: white
+  color: white;
+  /* background-color: black; */
 }
 
 #particleJs canvas {
@@ -26,4 +27,33 @@ body {
       hsl(139deg 46% 6%) 95%,
       hsl(139deg 53% 7%) 98%,
       hsl(139deg 61% 7%) 100%);
+}
+
+
+#curved-text {
+  color: white;
+  font-size: 40px;
+}
+
+.curved-svg {
+  color: red;
+  max-width: 200px;
+  letter-spacing: 10px;
+  animation: spin 10s linear infinite;
+}
+
+
+#tspan{
+  fill: yellow;
+  font-weight: bold;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
