--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,42 @@ body {
   background-position: center;
   min-height: 100vh;
 }
+/* .stepperSubDiv {
+  margin: 1.4em;
+  background: #172539;
+  border-radius: 12px;
+  padding: 1.4em;
+  color: #63b38f;
+} */
 
+.customStyle::after{
+content: "";
+width: 100%;
+height: 2px; 
+left: 10;
+position: absolute;
+background-color:red ;
+}
+
+.stepperSubDiv h1 {
+  font-weight: 500;
+  color: #70cea2;
+}
+
+
+.stepperBtn {
+  cursor: pointer;
+  outline: none;
+  box-shadow: none;
+  border: none;
+  background: #172539;
+  color: #63b38f;
+  border-radius: 12px;
+  padding: 0.5em 1.4em;
+  font-size: 1.2em;
+  font-weight: 500;
+  margin: 1.4em;
+}
 #particleJs canvas {
   z-index: -1;
   position: absolute;
